# machine.ai

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  claude_plan.md  plan.md  players.csv  pyproject.toml  target.md  test_basic.py  test_minimal.py  test_standalone.py
src/data/: major_collector.py  major_collector_api.py
src/machine_ai/: __init__.py  cli.py
src/machine_ai/agents/: __init__.py  api_agent.py  base.py  strategy.py
src/machine_ai/game/: __init__.py  engine.py  feedback.py  models.py
tests/: __init__.py  test_game_engine.py
