[project]
name = "machine-ai"
version = "0.1.0"
description = "CS Player Guessing Game AI Agent - SOTA performance through strategic reasoning"
readme = "README.md"
authors = [
    { name = "octane0411", email = "wdznb1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # AI/ML dependencies
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "requests>=2.31.0",

    # Data processing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # CLI and utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",

    # API clients
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

training = [
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
]

[project.scripts]
machine-ai = "machine_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
